--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import "react-datepicker/dist/react-datepicker.css";
+@import "./datepicker.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
